# marcut

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .swiftformat  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  backlog.md  build_appstore_release.sh  build_swift_only.sh  build_tui.py  create_python_bundle.sh  pyproject.toml  pytest.ini  requirements-pinned.txt  test_overlap.py
.github/: CODEOWNERS
assets/: AppIcon.icns  Marcut.entitlements  PrivacyInfo.xcprivacy  excluded-words.txt  forensics-guide.md  forensics-guide.rtf  help.md  models.json
build-scripts/: BUILD_CONFIG.sh  Makefile  Marcut.entitlements  build_appstore_release.sh  build_swift_only.sh  build_tui.py  config.example.json  notarize_macos.sh  package_release.sh  setup_beeware_framework.sh  submit_appstore.sh
docs/: BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  METADATA_HARDENING.md  PERFORMANCE_OPTIMIZATION.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TECHNICAL_ARCHITECTURE.md  USER_GUIDE.md
packaging/: ollama-helper-Info.plist
scripts/: build.sh  check_dependency_vulnerabilities.py  check_markdown_links.py  generate_ground_truth.py  generate_python_sbom.py  gui_e2e_watchdog.py  local_e2e.sh  notarize_macos.sh  release_preflight.sh  render_help_html.py  run_python.sh  run_qwen_experiment.py  verify_bundle.sh  verify_entitlements.sh  verify_macos.sh
tests/: __init__.py  conftest.py  malformed_docx_corpus.py  run_tests.py  test_address_rules.py  test_chunker.py  test_cli.py  test_docx_io.py  test_docx_part_coverage.py  (+24 more)
(+165 files in other folders)
